Temporary fix to Facebook feed. Only kinda works on mobile.

--- a/client/src/app/newseventspage/newseventspage.component.css
+++ b/client/src/app/newseventspage/newseventspage.component.css
@@ -35,4 +35,8 @@
         width: 85vw;
         margin: 15px auto;
     }
+
+    .facebook-container iframe{
+        width: 100%;
+    }
 }
